--- a/restourants/tanyki.html
+++ b/restourants/tanyki.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="section__header">
-        <div class="container block">
+        <div class="container block block__header">
             <a href="/" class="logo">
                 <img src="../img/logo.svg" alt="логотиппппппп" class="logo__img">
             </a>
