--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <!-- /.socials -->
         </div>
     </footer>
-   <div id="modal"class=" modal">
+   <div id="modal" class=" modal">
        <div class="modal-block">
          <h2 class="modal-title">Корзина</h2>  
          <button id="close" class="button--closed close"></button>
@@ -270,6 +270,6 @@
     </div>
    </div>
    <!-- /.div modal -->
-   
+</div>
 </body>
 </html>
